# secure-p2p-chat

./: .gitignore  AUDIT.md  BUG_FIXES.md  BUG_FIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_GUIDE.md  DEVELOPMENT_PLAN.md  DOCS_INDEX.md  FIX_COMPLETION_REPORT.md  GEMINI.md  GITHUB_PUSH_INSTRUCTIONS.md  HISTORY.md  IMPLEMENTATION_STATUS.md  LICENSE.md  PRIVATE_PUSH_GUIDE.md  PROTOCOL_SPEC.md  README.md  RELEASE_NOTES_v1.2.0.md  ROADMAP.md  SECURITY.md  TECHNICAL_DETAILS.md  build-and-package.ps1  project overvieuw.md  setup.iss  test_forward_secrecy.rs  test_output.txt  test_result.txt
.claude/: settings.local.json
docs/: 01_introduction.md  02_getting_started.md  03_architecture.md  04_protocol.md  05_contributing.md  06_roadmap.md  07_security.md  08_changelog.md  DOCS_INDEX.md  SUMMARY.md
docs/Planning/: CHANGELOG.md  DEVELOPMENT_PLAN.md  HISTORY.md
docs/Technical/: CLAUDE.md  FORWARD_SECRECY.md
scripts/: test_invite_fix.rs
src/: lib.rs  main-alexandre.rs  main.rs  types-alexandre.rs  types.rs  util.rs
src/app/: chat_manager-alexandre.rs  chat_manager.rs  mod.rs  persistence.rs
src/core/: crypto.rs  framing.rs  mod.rs  protocol.rs
src/gui/: app_ui.rs  chat_view.rs  dialogs.rs  mod.rs  sidebar.rs  styling.rs  widgets.rs
src/identity/: mod.rs
src/network/: session.rs
src/transfer/: receiver.rs  sender.rs
