[package]
name = "encodeur_rsa_rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "P2P encrypted messaging application with file transfer"

[dependencies]
# Runtime async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Cryptography (RustCrypto)
rsa = "0.9"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
getrandom = "0.2"
x25519-dalek = "2.0"
hkdf = "0.12"

# Encodage
hex = "0.4"
base64 = "0.21"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# GUI
eframe = "0.27"
egui = "0.27"

# Utilities
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# File dialogs
rfd = "0.14"

# Open files
open = "5"

# Desktop notifications
notify-rust = "4"

# Emoji support
emojis = "0.6"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
