[package]
name = "encodeur_rsa_rust"
version = "1.3.0"
edition = "2024"
authors = ["fibo3090 <fibo3090@.com>"]
description = "Encrypted P2P Messenger - A secure peer-to-peer messaging application with end-to-end encryption and forward secrecy"

[dependencies]
# Runtime async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Cryptography (RustCrypto)
rsa = "0.9"
sha2 = "0.10"
aes-gcm = "0.10.3"
rand = "0.8"
getrandom = "0.2"
x25519-dalek = "2.0"
hkdf = "0.12"

# Encodage
hex = "0.4"
base64 = "0.21"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
egui_tracing = { version = "0.2.6", features = ["egui-default"] }

# CLI
clap = { version = "4", features = ["derive"] }

# GUI
eframe = "0.29"
egui = "0.29"

# Utilities
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
argon2 = "0.5"
zeroize = "1"

# File dialogs
rfd = "0.14"

# Open files
open = "5"

# Desktop notifications
notify-rust = "4"

# Emoji support
emojis = "0.6"

# QR code generation and scanning
qrcode = "0.14"
image = "0.25"
arboard = "3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = []
embed_fonts = []
